add order items
