# api/app/models/order.rb
@@ -2,6 +2,7 @@
 
 class Order < ApplicationRecord
   belongs_to :company
+  has_many :order_items
 
   validates :name, presence: true
 end
