# api/db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_04_24_185831) do
+ActiveRecord::Schema[8.0].define(version: 2025_04_30_180544) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -27,6 +27,20 @@ ActiveRecord::Schema[8.0].define(version: 2025_04_24_185831) do
     t.datetime "updated_at", null: false
     t.index ["cnpj"], name: "index_companies_on_cnpj", unique: true
     t.index ["user_id"], name: "index_companies_on_user_id"
+  end
+
+  create_table "order_items", force: :cascade do |t|
+    t.string "code"
+    t.string "product"
+    t.float "price"
+    t.integer "quantity"
+    t.string "ean_code"
+    t.string "admin_feedback"
+    t.string "status", default: "pending"
+    t.bigint "order_id", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["order_id"], name: "index_order_items_on_order_id"
   end
 
   create_table "orders", force: :cascade do |t|
@@ -53,5 +67,6 @@ ActiveRecord::Schema[8.0].define(version: 2025_04_24_185831) do
   end
 
   add_foreign_key "companies", "users"
+  add_foreign_key "order_items", "orders"
   add_foreign_key "orders", "companies"
 end
